# MobiAttn

./: .gitmodules  CMakeLists.txt  README.md  build.py
benchmark/: CMakeLists.txt
benchmark/arm_flash_attn_2/: CMakeLists.txt  benchmark.cpp
examples/arm_flash_attn_2/: CMakeLists.txt  main.cpp
mobi_attn/common/: arm_common.hpp  arm_flash_attn_2_mma0.hpp  arm_flash_attn_2_mma1.hpp
mobi_attn/flash_attn_2/: CMakeLists.txt  README.md  arm_qkv_fp16_o_fp16_fa2.hpp  driver.hpp
mobi_attn/utils/: arm_math.hpp
tasks/: adb_push.yaml  android_build_armv8.yaml
tests/: CMakeLists.txt
tests/arm_flash_attn_2/: CMakeLists.txt  main.cpp
